Add support for multiple notification profiles in one NotificationMessage
- fixing SQ issues